2004-01-15  Hans Petter Jansson  <hpj@ximian.com>

	* gui/widgets/e-addressbook-view.c (set_paned_position): Implement.
	(get_paned_position): Implement.
	(eab_view_new): Connect signal to get paned position changes.
	Remove old hack.
	(display_view): Set paned position properly.

2004-01-12  JP Rosevear <jpr@ximian.com>

	* gui/component/addressbook-component.c (impl_upgradeFromVersion):
	revert dumb upgrade change

2004-01-12  JP Rosevear <jpr@ximian.com>

	* gui/component/addressbook-component.c (impl_upgradeFromVersion):
	migrate from 1.5.0 and 1.5.1 properly

2004-01-12  JP Rosevear  <jpr@ximian.com>

	* gui/contact-editor/contact-editor.glade: de-bold ui elements

2004-01-09  Hans Petter Jansson  <hpj@ximian.com>

	* gui/component/addressbook-component.c (add_popup_menu_item): Take a
	sensitivity flag per menu item, and fall back to stock icons.
	(delete_addressbook_cb): Implement.
	(fill_popup_menu_callback): Reorder items, remove "remove" item, set
	sensitivity.

	* gui/component/ldap-config.glade: "Edit LDAP Server" ->
	"Addressbook Properties".

2004-01-11  Christian Hammond  <chipx86@gnupdate.org>

	* addressbook/gui/contact-editor/e-contact-editor-im.[ch],
	  addressbook/gui/contact-editor/im.glade: Added a dialog for
	  adding a new IM account.
	* addressbook/gui/contact-editor/Makefile.am: Added the previously
	  mentioned files, and depend on camel for necessary MIME parsing.

	* addressbook/gui/contact-editor/contact-editor.[ch],
	  addressbook/gui/contact-editor/contact-editor.glade: Add and implement

2004-01-09  Ross Burton  <ross@burtonini.com>

	* gui/component/select-names/e-select-names-completion.c:
	* gui/merging/eab-contact-compare.c:
	* gui/widgets/e-addressbook-model.c:
	* printing/e-contact-print.c:
	Update for API changes to e-book-async.

2004-01-08  Ross Burton  <ross@burtonini.com>

	* gui/contact-editor/contact-editor.glade:
	* gui/contact-editor/e-contact-editor.c:
	Add the video conferencing field.
