@@ -1,3 +1,9 @@
+2004-01-16  JP Rosevear <jpr@ximian.com>
+
+	* gui/component/addressbook.c (set_prop): only set the menus and
+	command state if we actually are already displayed, otherwise wait
+	for activation
+
 2004-01-15  Hans Petter Jansson  <hpj@ximian.com>
 
 	* gui/widgets/e-addressbook-view.c (set_paned_position): Implement.
